Fix underline in dark mode

--- a/src/components/Underline.css
+++ b/src/components/Underline.css
@@ -1,13 +1,3 @@
-:root {
-  --shadow-color: rgb(228, 228, 228);
-}
-
 .ul {
-  box-shadow: inset 0 -0.5em 0 var(--shadow-color);
-  transition: box-shadow 150ms;
   font-style: normal;
-}
-
-.ul:hover {
-  box-shadow: inset 0 -1em 0 var(--shadow-color);
 }
